--- a/roundedSection.css
+++ b/roundedSection.css
@@ -47,7 +47,7 @@
 }
 .rounded h2{
 
-    color:#7B0137;
+    color:#0b184d;
     font-size: 3rem;
     margin-bottom: 10px;
     text-align: center;
@@ -60,7 +60,7 @@
 
 }
 .rounded p{
-    color: #7B0137;
+    color: #0b184d;
     text-align: center;
    
 }
