--- a/slider.css
+++ b/slider.css
@@ -12,7 +12,7 @@
     position: relative;
     overflow: hidden;
     padding: 20px;
-    background-color: #fdf6f0;
+    background-color: #f5fbff;
   }
   
   .product-category {
@@ -25,7 +25,7 @@
   }
   .product-category h2{
     font-family: 'EB+Garamond';
-    color: #ab7084;
+    color: #0b184d;
     
     
   }
@@ -65,7 +65,7 @@
     background: #fff;
     padding: 5px;
     border-radius: 5px;
-    color: #ab7084;
+    color: #0b184d;
     right: 10px;
     top: 10px;
     text-transform: capitalize;
@@ -81,7 +81,7 @@
     text-transform: capitalize;
     border: none;
     outline: none;
-    background: #fff;
+    background: #f5fbff;
     border-radius: 5px;
     transition: 0.5s;
     cursor: pointer;
@@ -99,7 +99,7 @@
   
   }
   .card-btn:hover {
-    background: #ab7084;
+    background: #0b184d;
     color: #fff;
     
   }
@@ -152,7 +152,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #f5fbff 100%);
     cursor: pointer;
     z-index: 8;
   }
@@ -210,7 +210,7 @@
   }
   p{
     text-align: center;
-    color: #ab7084;
+    color: #0b184d;
     font-weight: bold;
     
   }
