--- a/sliderbestseller.css
+++ b/sliderbestseller.css
@@ -11,7 +11,7 @@
     position: relative;
     overflow: hidden;
     padding: 20px;
-    background-color: #fdf6f0;
+    background-color: #f5fbff;
   }
   
   .product-category {
@@ -58,7 +58,7 @@
     background: #fff;
     padding: 5px;
     border-radius: 5px;
-    color: #ff7d7d;
+    color: #0b184d;
     right: 10px;
     top: 10px;
     text-transform: capitalize;
@@ -86,7 +86,7 @@
   }
   
   .card-btn:hover {
-    background: #ff7d7d;
+    background: #0b184d;
     color: #fff;
   }
   
@@ -110,7 +110,7 @@
     margin: 5px 0;
   }
   
-  .price {
+  .price h3 {
     font-weight: 900;
     font-size: 20px;
   }
@@ -186,5 +186,8 @@
   .collection:nth-child(3) {
     grid-column: span 2;
     margin-bottom: 10px;
+  }
+  h3{
+    color:#0b184d;
   }
   
