--- a/makeup.css
+++ b/makeup.css
@@ -162,7 +162,7 @@ span {
   font-family: 'Noto Sans', sans-serif;
   font-family: 'Tinos', serif;
   font-weight: normal;
-  color: purple;
+  color: #0b184d;
   margin-bottom: 3rem;
   font-size: 4rem;
 }
@@ -172,7 +172,7 @@ span {
   font-family: 'Noto Sans', sans-serif;
   font-family: 'Tinos', serif;
   font-weight: normal;
-  color: purple;
+  color: #0b184d;
   margin-bottom: 2rem;
   font-size: 2rem;
 
@@ -264,7 +264,7 @@ span {
   font-family: 'Tinos', serif;
   font-size: 2.4rem;
 
-  color: rgb(94, 31, 94);
+  color: #0b184d;
 
   /* padding-bottom: 3rem; */
   font-weight: lighter;
@@ -303,7 +303,7 @@ span {
 }
 
 .checked {
-  color: rgb(177, 40, 111);
+  color: #0b184d;
 }
 
 .unchecked {
@@ -324,7 +324,7 @@ body {
 
   cursor: pointer;
   outline: none;
-  border: 1px solid rgb(103, 8, 81);
+  border: 1px solid #0b184d;
 }
 
 .btn1-group {
@@ -336,7 +336,7 @@ body {
 .btn1-group a {
   text-decoration: none;
   cursor: pointer;
-  color: rgb(103, 8, 81);
+  color: #0b184d;
 }
 
 .btn1-group a:hover {
@@ -344,7 +344,7 @@ body {
 }
 
 .btn1-group button:hover {
-  background-color: rgb(103, 8, 81);
+  background-color: #0b184d;
 }
 
 .btn1-group button:hover a {
