--- a/makeup.css
+++ b/makeup.css
@@ -27,7 +27,7 @@ html::-webkit-scrollbar {
 }
 
 html::-webkit-scrollbar-thumb {
-  background-color:#ab7084;
+  background-color:#0b184d;
   opacity: 0.2;
 }
 
