--- a/sliderbestseller.css
+++ b/sliderbestseller.css
@@ -42,19 +42,19 @@
   
   .product-image {
     position: relative;
-    width: 100%;
-    height: 350px;
+    width: 1800px;
+    height: 1800px;
     overflow: hidden;
   }
   
   .product-thumb {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:cover;
   }
   
   .discount-tag {
-    position: absolute;
+    position: fixed;
     background: #fff;
     padding: 5px;
     border-radius: 5px;
@@ -189,5 +189,9 @@
   }
   h3{
     color:#0b184d;
+  }
+  .product-image img {
+    max-width: 100%;
+    height: auto;
   }
   
