--- a/search.css
+++ b/search.css
@@ -9,16 +9,20 @@ td, th,thead{
     border: 1px solid #fae3e3;
     padding: 0.5rem;
     text-align: center;
+    background-color: #cae4f5;
 }
  
 table {
     border-collapse: collapse;
-    width: 1000px;
+    width: 600px;
 }
  
 tbody tr:nth-child(odd) {
-    background: #fae3e3;
+    background:var(--color-primary);
 }
 caption {
     font-size: 0.8rem;
+}
+main{
+    padding-right: 100px;
 }
